// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lists should render Ordered 1`] = `
<DocumentFragment>
  <ol>
    <li>
      One
    </li>
    <li>
      Two
    </li>
  </ol>
</DocumentFragment>
`;

exports[`Lists should render Unordered 1`] = `
<DocumentFragment>
  <ul>
    <li>
      One
    </li>
    <li>
      Two
    </li>
  </ul>
</DocumentFragment>
`;
